--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Brian C.</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Brian.Codes</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -68,7 +68,6 @@
                           some problems together! (that's how I ended up running my first marathon)
 
                           I love learning new skills, making music, traveling, climbing, coding, and eating. Mostly eating...
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
                 </div>
             </div>
@@ -96,11 +95,11 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
+                        <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">React + API Integration</div>
+                                <div class="project-name">Weather Finder</div>
                             </div>
                         </a>
                     </div>
@@ -135,7 +134,7 @@
             </div>
         </div>
         <!-- Skills-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="skills">
             <div class="container">
                 <h2 class="text-center mt-0">Technical Skills</h2>
                 <hr class="divider my-4" />
@@ -171,11 +170,11 @@
                 </div>
             </div>
         </section>
-        <!-- Call to action-->
+        <!-- Resume -->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <h2 class="mb-4">Download my resume or check out my certifications</h2>
+                <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1urNX7CHXdAVhmqDulOsXRTHZKFGnJtep/view?usp=sharing">Resume</a>
             </div>
         </section>
         <!-- Contact-->
