Skills logos - Adding logos and technical skills

--- a/index.html
+++ b/index.html
@@ -135,19 +135,89 @@
         </div>
         <!-- Skills-->
         <section class="page-section" id="skills">
-            <div class="container">
-                <h2 class="text-center mt-0">Technical Skills</h2>
-                <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <img class="portfolio-box" src="assets/img/logos/html_70x70.svg" alt="html"/>
-                            <p class="text-muted mb-0">HTML</p>
-                        </div>
+          <div class="container">
+              <h2 class="text-center mt-0">Technical Skills</h2>
+              <hr class="divider my-4" />
+              <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <img class="portfolio-box" src="assets/img/logos/bootstrap_70x70.svg" alt="bootstrap"/>
+                        <p class="text-muted mb-0">Bootstrap</p>
                     </div>
-
                 </div>
-            </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <img class="portfolio-box" src="assets/img/logos/css_70x70.svg" alt="css"/>
+                        <p class="text-muted mb-0">CSS</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/express_70x70.svg" alt="express"/>
+                    <p class="text-muted mb-0">Express</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/git_70x70.svg" alt="git"/>
+                    <p class="text-muted mb-0">Git</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/html_70x70.svg" alt="html"/>
+                    <p class="text-muted mb-0">HTML</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/javascript_70x70.svg" alt="javascript"/>
+                    <p class="text-muted mb-0">JavaScript</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/jquery_70x70.svg" alt="jquery"/>
+                    <p class="text-muted mb-0">jQuery</p>
+                  </div>
+                </div>
+                <div class="mt-5">
+                  <img class="portfolio-box" src="assets/img/logos/mongodb_70x70.svg" alt="mongodb"/>
+                  <p class="text-muted mb-0">MongoDB</p>
+                </div>
+              </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/nodejs_70x70.svg" alt="nodejs"/>
+                    <p class="text-muted mb-0">node.js</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/postgresql_70x70.svg" alt="postgresql"/>
+                    <p class="text-muted mb-0">PostgreSQL</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/python_70x70.svg" alt="python"/>
+                    <p class="text-muted mb-0">Python</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/react_70x70.svg" alt="react"/>
+                    <p class="text-muted mb-0">React</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <img class="portfolio-box" src="assets/img/logos/sass_70x70.svg" alt="sass"/>
+                    <p class="text-muted mb-0">SASS</p>
+                  </div>
+                </div>
+              </div>
+          </div>
         </section>
         <!-- Resume -->
         <section class="page-section bg-dark text-white" id="resume">
