Fix connect logos and links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="container">
               <a class="navbar-brand js-scroll-trigger" href="#page-top">Brian.Codes</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">a</span></button>
+              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">_</span></button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto my-2 my-lg-0">
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -237,17 +237,23 @@
                   </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <img class="fas fa-phone fa-3x mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="github">
+                <div class="col-lg-4 col-sm-3 text-center">
+                  <a href="https://github.com/bchin224">
+                    <img class="mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="github">
                     <div>Github</div>
+                  </a>
                 </div>
-                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <img class="fas fa-phone fa-3x mb-3 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
+                <div class="col-lg-4 col-sm-3 text-center">
+                  <a href="https://www.linkedin.com/in/brianpchin1/">
+                    <img class="mb-3 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
                     <div>LinkedIn</div>
+                  </a>
                 </div>
-                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <img class="fas fa-phone fa-3x mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
+                <div class="col-lg-4 col-sm-3 text-center">
+                  <a href="mailto:brianpchin1@gmail.com">
+                    <img class="mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
                     <div>Email</div>
+                  </a>
                 </div>
               </div>
           </div>
