Update title icon + clean up connect logos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>Brian Chin | Software Developer</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logos/BC_70x70.svg" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -188,6 +188,12 @@
             </div>
             <div class="col-lg-2 col-md-3 text-center">
               <div class="mt-5">
+                <img class="portfolio-box" src="assets/img/logos/mongoose_70x70.svg" alt="mongoose"/>
+                <p class="text-muted mb-0">Mongoose</p>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-3 text-center">
+              <div class="mt-5">
                 <img class="portfolio-box" src="assets/img/logos/nodejs_70x70.svg" alt="nodejs"/>
                 <p class="text-muted mb-0">node.js</p>
               </div>
@@ -237,19 +243,19 @@
                   </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 col-sm-3 text-center">
+                <div class="col-lg-4 text-center">
                   <a href="https://github.com/bchin224">
-                    <img class="mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="github">
+                    <img class="mb-3 text-muted" src="assets/img/logos/github_70x70.svg" alt="github">
                     <div>Github</div>
                   </a>
                 </div>
-                <div class="col-lg-4 col-sm-3 text-center">
+                <div class="col-lg-4 text-center">
                   <a href="https://www.linkedin.com/in/brianpchin1/">
                     <img class="mb-3 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
                     <div>LinkedIn</div>
                   </a>
                 </div>
-                <div class="col-lg-4 col-sm-3 text-center">
+                <div class="col-lg-4 text-center">
                   <a href="mailto:brianpchin1@gmail.com">
                     <img class="mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
                     <div>Email</div>
