--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>Brian Chin | Software Developer</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/logos/BC_70x70.svg" />
+    <link rel="icon" href="assets/img/logos/BC_Icon.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
