--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="container">
               <a class="navbar-brand js-scroll-trigger" href="#page-top">Brian.Codes</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon">_</span></button>
+              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto my-2 my-lg-0">
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -228,7 +228,7 @@
       <!-- Resume -->
       <section class="page-section bg-dark text-white" id="resume">
           <div class="container text-center">
-              <h2 class="mb-4">Download my resume or check out my certifications</h2>
+              <h2 class="mb-2">Download my resume or view my certifications</h2>
               <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1urNX7CHXdAVhmqDulOsXRTHZKFGnJtep/view?usp=sharing">Resume</a>
           </div>
       </section>
@@ -243,21 +243,21 @@
                   </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-sm-4 text-center">
                   <a href="https://github.com/bchin224">
-                    <img class="mb-3 text-muted" src="assets/img/logos/github_70x70.svg" alt="github">
+                    <img class="mb-2 text-muted" src="assets/img/logos/github_70x70.svg" alt="github">
                     <div>Github</div>
                   </a>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-sm-4 text-center">
                   <a href="https://www.linkedin.com/in/brianpchin1/">
-                    <img class="mb-3 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
+                    <img class="mb-2 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
                     <div>LinkedIn</div>
                   </a>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-sm-4 text-center">
                   <a href="mailto:brianpchin1@gmail.com">
-                    <img class="mb-3 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
+                    <img class="mb-2 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
                     <div>Email</div>
                   </a>
                 </div>
