CookieJar portfolio test + adding project photos

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                   <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">About <b>Me</b></h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">
+                    <p class="text-white-50 mb-2">
                       My name is Brian, I'm based in New York City and I consider myself a <i>Full(er)-stack developer.</i>
                       Why? Because I spent almost a decade as a graphic designer in the world of concerts and live entertainment
                       and now I'm ready to solve some engineering problems! I can code your back-end, code your
-                      front-end, AND design it all too! I love challenges and rarely backdown from one so let's solve
+                      front-end, AND design it all too! I love challenges and rarely back down from one so let's solve
                       some problems together! (that's how I ended up running my first marathon)
 
                       I love learning new skills, making music, traveling, climbing, coding, and eating. Mostly eating...
@@ -85,13 +85,13 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">MERN Stack E-commerce App</div>
-                            <div class="project-name">cookieJar</div>
-                        </div>
-                    </a>
+                  <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                    <img class="img-fluid" src="assets/img/portfolio/cookieJar.jpg" alt="cookieJar"/>
+                    <div class="portfolio-box-caption">
+                        <div class="project-category text-white-50">MERN Stack E-commerce App</div>
+                        <div class="project-name">cookieJar</div>
+                    </div>
+                  </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
