Remove portfolio boxes so links work

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                  <a href="https://render-babyyoda.github.io/ecommerce-client/#/">
                     <img class="img-fluid" src="assets/img/portfolio/cookieJar.jpg" alt="cookieJar"/>
                     <div class="portfolio-box-caption">
                         <div class="project-category text-white-50">MERN Stack E-commerce App</div>
@@ -94,8 +94,8 @@
                   </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                    <a href="https://bchin224.github.io/weather-finder-app/">
+                        <img class="img-fluid" src="assets/img/portfolio/weather_finder.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">React + API Integration</div>
                             <div class="project-name">Weather Finder</div>
@@ -103,8 +103,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                    <a href="https://bchin224.github.io/days_since_client/">
+                        <img class="img-fluid" src="assets/img/portfolio/days_since.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">JS + Express Full-Stack App</div>
                             <div class="project-name">Days Since</div>
@@ -121,8 +121,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                    <a href="https://bchin224.github.io/project1_tictactoe/">
+                        <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
                             <div class="project-category text-white-50">Full-stack Application</div>
                             <div class="project-name">Tic Tac Toe</div>
