--- a/index.html
+++ b/index.html
@@ -77,56 +77,74 @@
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Coming Soon</div>
-                            <div class="project-name">Project 4</div>
-                        </div>
+                      <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                      <div class="portfolio-box-caption">
+                          <div class="project-category text-white-50">Coming Soon</div>
+                          <div class="project-name">Project 4</div>
+                      </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                  <a href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                  <a class="portfolio-box" href="assets/img/portfolio/cookieJar.jpg">
                     <img class="img-fluid" src="assets/img/portfolio/cookieJar.jpg" alt="cookieJar"/>
                     <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">MERN Stack E-commerce App</div>
-                        <div class="project-name">cookieJar</div>
+                      <div class="project-name">cookieJar</div>
+                      <div class="project-category text-white-50">A MERN Stack E-commerce App. CookieJar allows
+                      users to sign up, sign in, and then start purchasing some cookies! Credit card information
+                      and validation is handled by the Stripe API.</div>
                     </div>
+                  </a>
+                  <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                    Click here to view cookieJar
                   </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://bchin224.github.io/weather-finder-app/">
-                        <img class="img-fluid" src="assets/img/portfolio/weather_finder.jpg" alt="" />
+                    <a class="portfolio-box" href="assets/img/portfolio/weather_finder.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/weather_finder.jpg" alt="weather_finder" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">React + API Integration</div>
                             <div class="project-name">Weather Finder</div>
                         </div>
                     </a>
+                    <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
+                      Click here to view Weather Finder
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://bchin224.github.io/days_since_client/">
+                    <a class="portfolio-box" href="assets/img/portfolio/days_since.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/days_since.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">JS + Express Full-Stack App</div>
-                            <div class="project-name">Days Since</div>
+                          <div class="project-name">Days Since</div>
+                            <div class="project-category text-white-50">A JavaScript and express full-stack application,
+                            Days Since allows a user to sign up, sign in and then save significant dates that they might
+                            want to remember how many days have passed since then such as anniversaries.</div>
                         </div>
+                    </a>
+                    <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
+                      Click here to view Days Since
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">MERN Stack + API Integration</div>
-                            <div class="project-name">Google Momentum Clone</div>
+                          <div class="project-name">Google Momentum Clone</div>
+                          <div class="project-category text-white-50">MERN Stack + API Integration</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://bchin224.github.io/project1_tictactoe/">
+                    <a class="portfolio-box" href="assets/img/portfolio/tic_tac_toe.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Full-stack Application</div>
-                            <div class="project-name">Tic Tac Toe</div>
+                          <div class="project-name">Tic Tac Toe</div>
+                          <div class="project-category text-white-50">A full-stack application where a user
+                          can sign up, sign in, and then play some tic-tac-toe with a friend. the final moves,
+                          results and number of games played are saved for the user as well.</div>
                         </div>
+                    </a>
+                    <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
+                      Click here to view Tic Tac Toe
                     </a>
                 </div>
             </div>
