Adjusting portfolio links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="container h-100">
               <div class="row h-100 align-items-center justify-content-center text-center">
                   <div class="col-lg-10 align-self-end">
-                      <h1 class="text-white">Hello World! I'm <b>Brian</b></h1>
+                      <h1 class="text-white">Hello World!</br> I'm <b>Brian</b></h1>
                       <hr class="divider my-4" />
                   </div>
                   <div class="col-lg-8 align-self-baseline">
@@ -94,7 +94,7 @@
                       and validation is handled by the Stripe API.</div>
                     </div>
                   </a>
-                  <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                  <a href="https://render-babyyoda.github.io/ecommerce-client/#/">
                     Click here to view cookieJar
                   </a>
                 </div>
@@ -106,7 +106,7 @@
                             <div class="project-name">Weather Finder</div>
                         </div>
                     </a>
-                    <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
+                    <a href="https://bchin224.github.io/weather-finder-app/">
                       Click here to view Weather Finder
                     </a>
                 </div>
@@ -120,7 +120,7 @@
                             want to remember how many days have passed since then such as anniversaries.</div>
                         </div>
                     </a>
-                    <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
+                    <a href="https://bchin224.github.io/days_since_client/">
                       Click here to view Days Since
                     </a>
                 </div>
@@ -131,6 +131,9 @@
                           <div class="project-name">Google Momentum Clone</div>
                           <div class="project-category text-white-50">MERN Stack + API Integration</div>
                         </div>
+                    </a>
+                    <a href="www.google.com">
+                      Coming soon
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -143,7 +146,7 @@
                           results and number of games played are saved for the user as well.</div>
                         </div>
                     </a>
-                    <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
+                    <a href="https://bchin224.github.io/project1_tictactoe/">
                       Click here to view Tic Tac Toe
                     </a>
                 </div>
