Adding design skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume & Certifications</a></li>
+                      <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                   </ul>
               </div>
@@ -243,14 +243,38 @@
                 <p class="text-muted mb-0">SASS</p>
               </div>
             </div>
+            <div class="col-lg-2 col-md-3 text-center">
+              <div class="mt-5">
+                <img class="portfolio-box" src="assets/img/logos/after_effects_70x70.svg" alt="aftereffects"/>
+                <p class="text-muted mb-0">After Effects</p>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-3 text-center">
+              <div class="mt-5">
+                <img class="portfolio-box" src="assets/img/logos/illustrator_70x70.svg" alt="illustrator"/>
+                <p class="text-muted mb-0">Illustrator</p>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-3 text-center">
+              <div class="mt-5">
+                <img class="portfolio-box" src="assets/img/logos/indesign_70x70.svg" alt="indesign"/>
+                <p class="text-muted mb-0">InDesign</p>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-3 text-center">
+              <div class="mt-5">
+                <img class="portfolio-box" src="assets/img/logos/photoshop_70x70.svg" alt="photoshop"/>
+                <p class="text-muted mb-0">Photoshop</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
       <!-- Resume -->
       <section class="page-section bg-dark text-white" id="resume">
           <div class="container text-center">
-              <h2 class="mb-2">Download my resume or view my certifications</h2>
-              <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1urNX7CHXdAVhmqDulOsXRTHZKFGnJtep/view?usp=sharing">Resume</a>
+              <h2 class="mb-2">Download my resume</h2>
+              <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1jeLR98H5hdptl3Rs2JXR2pKnUsjeyO-0/view?usp=sharing">Resume</a>
           </div>
       </section>
       <!-- Contact-->
