--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <!-- Portfolio-->
       <div id="portfolio">
         <div class="container-fluid p-0">
+          <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
