link and footer styling

--- a/index.html
+++ b/index.html
@@ -292,19 +292,19 @@
                 <div class="col-lg-4 col-sm-4 text-center">
                   <a href="https://github.com/bchin224">
                     <img class="mb-2 text-muted" src="assets/img/logos/github_70x70.svg" alt="github">
-                    <div>Github</div>
+                    <div class="text-muted">Github</div>
                   </a>
                 </div>
                 <div class="col-lg-4 col-sm-4 text-center">
                   <a href="https://www.linkedin.com/in/brianpchin1/">
                     <img class="mb-2 text-muted" src="assets/img/logos/linkedin_70x70.svg" alt="linkedin">
-                    <div>LinkedIn</div>
+                    <div class="text-muted">LinkedIn</div>
                   </a>
                 </div>
                 <div class="col-lg-4 col-sm-4 text-center">
                   <a href="mailto:brianpchin1@gmail.com">
                     <img class="mb-2 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
-                    <div>Email</div>
+                    <div class="text-muted">Email</div>
                   </a>
                 </div>
               </div>
