--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
       <div id="portfolio">
         <div class="container-fluid p-0">
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
+          <hr class="divider my-4" />
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                       <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                       <div class="portfolio-box-caption">
-                          <div class="project-category text-white-50">Coming Soon</div>
-                          <div class="project-name">Project 4</div>
+                          <div class="project-category text-white-50">JavaScript and React front end, Python and Django back end</div>
+                          <div class="project-name">My Personal Kanban</div>
                       </div>
                     </a>
                 </div>
@@ -90,7 +91,7 @@
                     <img class="img-fluid" src="assets/img/portfolio/cookieJar.jpg" alt="cookieJar"/>
                     <div class="portfolio-box-caption">
                       <div class="project-name">cookieJar</div>
-                      <div class="project-category text-white-50">A MERN Stack E-commerce App. CookieJar allows
+                      <div class="project-category text-white-50">MongoDB, Express, React, Node e-commer app. CookieJar allows
                       users to sign up, sign in, and then start purchasing some cookies! Credit card information
                       and validation is handled by the Stripe API.</div>
                     </div>
@@ -116,9 +117,9 @@
                         <img class="img-fluid" src="assets/img/portfolio/days_since.jpg" alt="" />
                         <div class="portfolio-box-caption">
                           <div class="project-name">Days Since</div>
-                            <div class="project-category text-white-50">A JavaScript and express full-stack application,
-                            Days Since allows a user to sign up, sign in and then save significant dates that they might
-                            want to remember how many days have passed since then such as anniversaries.</div>
+                            <div class="project-category text-white-50">A JavaScript and express full-stack
+                              application, Days Since allows a user to save significant dates in their lives
+                              and determine how many days have passed since then.</div>
                         </div>
                     </a>
                     <a href="https://bchin224.github.io/days_since_client/">
@@ -142,13 +143,14 @@
                         <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
                           <div class="project-name">Tic Tac Toe</div>
-                          <div class="project-category text-white-50">A full-stack application where a user
-                          can sign up, sign in, and then play some tic-tac-toe with a friend. the final moves,
-                          results and number of games played are saved for the user as well.</div>
+                            <div class="project-category text-white-50">
+                              <a href="https://bchin224.github.io/project1_tictactoe/">
+                                A JavaScript based full-stack application
+                              where a user can sign up, sign in, and then play some tic-tac-toe. The final moves,
+                              results and number of games played are saved.
+                              </a>
+                            </div>
                         </div>
-                    </a>
-                    <a href="https://bchin224.github.io/project1_tictactoe/">
-                      Click here to view Tic Tac Toe
                     </a>
                 </div>
             </div>
