--- a/index.html
+++ b/index.html
@@ -139,20 +139,16 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                  <div class="portfolio-box-caption p-3">
-                    <div class="project-name">This over popup</div>
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
+                  <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
                           <div class="project-name">Tic Tac Toe</div>
                           <div class="project-category text-white-50">JavaScript application</div>
+                          <a class="project-category text-white-50" href="https://bchin224.github.io/project1_tictactoe/">
+                            A JavaScript based full-stack application
+                            where a user can sign up, sign in, and then play some tic-tac-toe. The final moves,
+                            results and number of games played are saved.
+                          </a>
                         </div>
-                    </a>
-                    <a href="https://bchin224.github.io/project1_tictactoe/">
-                      A JavaScript based full-stack application
-                      where a user can sign up, sign in, and then play some tic-tac-toe. The final moves,
-                      results and number of games played are saved.
-                    </a>
                   </div>
                 </div>
             </div>
