--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="container">
               <a class="navbar-brand js-scroll-trigger" href="#page-top">Brian.Codes</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"> </span> </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto my-2 my-lg-0">
                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -139,21 +139,20 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                  <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
+                  <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
+                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
                           <div class="project-name">Tic Tac Toe</div>
-                          <div class="project-category text-white-50">JavaScript application</div>
-                          <a class="project-category text-white-50" href="https://bchin224.github.io/project1_tictactoe/">
-                            A JavaScript based full-stack application
-                            where a user can sign up, sign in, and then play some tic-tac-toe. The final moves,
-                            results and number of games played are saved.
-                          </a>
+                          <div class="project-category text-white-50">
+                            A JavaScript based full-stack application where a user can sign up, sign in, and then
+                            play some tic-tac-toe. The final moves, results and number of games played are saved.
+                          </div>
                         </div>
+                    </a>
                   </div>
                 </div>
             </div>
         </div>
-      </div>
       <!-- Skills-->
       <section class="page-section" id="skills">
         <div class="container">
