--- a/index.html
+++ b/index.html
@@ -77,80 +77,83 @@
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
           <hr class="divider my-4" />
             <div class="row no-gutters">
+              <!-- Project 1 -->
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                      <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                      <div class="portfolio-box-caption">
-                          <div class="project-category text-white-50">JavaScript and React front end, Python and Django back end</div>
-                          <div class="project-name">My Personal Kanban</div>
+                  <a class="portfolio-box" href="https://bchin224.github.io/my_personal_kanban_client/#/">
+                    <img class="img-fluid" src="assets/img/portfolio/mpk_650x350.jpg" alt="" />
+                      <div class="portfolio-box-caption p-3">
+                        <div class="project-name">My Personal Kanban</div>
+                        <div class="project-category text-white-75">
+                          JavaScript and React front end, Python and Django back end
+                        </div>
                       </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="assets/img/portfolio/cookieJar.jpg">
-                    <img class="img-fluid" src="assets/img/portfolio/cookieJar.jpg" alt="cookieJar"/>
-                    <div class="portfolio-box-caption">
-                      <div class="project-name">cookieJar</div>
-                      <div class="project-category text-white-50">MongoDB, Express, React, Node e-commer app. CookieJar allows
-                      users to sign up, sign in, and then start purchasing some cookies! Credit card information
-                      and validation is handled by the Stripe API.</div>
-                    </div>
-                  </a>
-                  <a href="https://render-babyyoda.github.io/ecommerce-client/#/">
-                    Click here to view cookieJar
                   </a>
                 </div>
+              <!-- Project 2 -->
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/weather_finder.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/weather_finder.jpg" alt="weather_finder" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">React + API Integration</div>
-                            <div class="project-name">Weather Finder</div>
+                  <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
+                    <img class="img-fluid" src="assets/img/portfolio/cookieJar_650x350.jpg" alt="" />
+                      <div class="portfolio-box-caption p-3">
+                        <div class="project-name">cookieJar</div>
+                        <div class="project-category text-white-75">
+                          MongoDB, Express, React, Node e-commer app. CookieJar allows
+                          users to sign up, sign in, and then start purchasing some cookies! Credit card information
+                          and validation is handled by the Stripe API.
                         </div>
-                    </a>
-                    <a href="https://bchin224.github.io/weather-finder-app/">
-                      Click here to view Weather Finder
-                    </a>
+                      </div>
+                  </a>
                 </div>
+              <!-- Project 3 -->
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/days_since.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/days_since.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                          <div class="project-name">Days Since</div>
-                            <div class="project-category text-white-50">A JavaScript and express full-stack
-                              application, Days Since allows a user to save significant dates in their lives
-                              and determine how many days have passed since then.</div>
+                  <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
+                    <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="" />
+                      <div class="portfolio-box-caption p-3">
+                        <div class="project-name">Google Momentum Clone</div>
+                        <div class="project-category text-white-75">
+                          React + API Integration
                         </div>
-                    </a>
-                    <a href="https://bchin224.github.io/days_since_client/">
-                      Click here to view Days Since
-                    </a>
+                      </div>
+                  </a>
                 </div>
+              <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                          <div class="project-name">Google Momentum Clone</div>
-                          <div class="project-category text-white-50">MERN Stack + API Integration</div>
+                  <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
+                    <img class="img-fluid" src="assets/img/portfolio/days_since.jpg_650x350" alt="" />
+                      <div class="portfolio-box-caption p-3">
+                        <div class="project-name">Days Since</div>
+                        <div class="project-category text-white-75">
+                          A JavaScript and express full-stack application, Days Since allows a user to save
+                          significant dates in their lives and determine how many days have passed since then.
                         </div>
-                    </a>
-                    <a href="www.google.com">
-                      Coming soon
-                    </a>
+                      </div>
+                  </a>
                 </div>
+              <!-- Project 5 -->
+                <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="https://www.google.com">
+                    <img class="img-fluid" src="assets/img/portfolio/fullsize/1.jpg" alt="" />
+                      <div class="portfolio-box-caption p-3">
+                        <div class="project-name">Google Momentum Clone</div>
+                        <div class="project-category text-white-75">
+                          React and JavaScript + API Integration
+                        </div>
+                      </div>
+                  </a>
+                </div>
+              <!-- Project 6 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
-                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg" alt="" />
-                        <div class="portfolio-box-caption p-3">
-                          <div class="project-name">Tic Tac Toe</div>
-                          <div class="project-category text-white-50">
-                            A JavaScript based full-stack application where a user can sign up, sign in, and then
-                            play some tic-tac-toe. The final moves, results and number of games played are saved.
-                          </div>
-                        </div>
-                    </a>
-                  </div>
+                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe.jpg_650x350" alt="" />
+                    <div class="portfolio-box-caption p-3">
+                      <div class="project-name">Tic Tac Toe</div>
+                      <div class="project-category text-white-75">
+                        A JavaScript based full-stack application where a user can sign up, sign in, and then
+                        play some tic-tac-toe. The final moves, results and number of games played are saved.
+                      </div>
+                    </div>
+                  </a>
                 </div>
+              </div>
             </div>
         </div>
       <!-- Skills-->
