fix bootstrap rows

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div class="container-fluid p-0">
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
           <hr class="divider my-4" />
+        <!-- Top Row -->
             <div class="row no-gutters">
               <!-- Project 1 -->
                 <div class="col-lg-4 col-sm-6">
@@ -115,6 +116,9 @@
                       </div>
                   </a>
                 </div>
+              </div>
+              <!-- Top Row -->
+              <div class="row no-gutters">
               <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
