--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                   <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
                     <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="" />
                       <div class="portfolio-box-caption p-3">
-                        <div class="project-name">Google Momentum Clone</div>
+                        <div class="project-name">Weather Finder App</div>
                         <div class="project-category text-white-75">
-                          React + API Integration
+                          A JavaScript and React application to get weather info from the Open Weather Map API.
+                          CSS was adjusted to match a given jpg as closely as possible, but I then added a
+                          responsive layouts to it for mobile functionality.
                         </div>
                       </div>
                   </a>
