all columns in one row

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                       </div>
                   </a>
                 </div>
-              </div>
-              <!-- Top Row -->
-              <div class="row no-gutters">
+            <!--/div>
+              <! Bottom Row -->
+            <!--div class="row no-gutters"-->
               <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
@@ -159,9 +159,9 @@
                     </div>
                   </a>
                 </div>
-              </div>
             </div>
         </div>
+      </div>
       <!-- Skills-->
       <section class="page-section" id="skills">
         <div class="container">
