troubleshooting portfolio section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div id="portfolio">
         <div class="container-fluid p-0">
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
-          <hr class="divider my-4" />
+          <hr class="divider my-4"/>
         <!-- Top Row -->
             <div class="row no-gutters">
               <!-- Project 1 -->
@@ -118,9 +118,7 @@
                       </div>
                   </a>
                 </div>
-            <!--/div>
-              <! Bottom Row -->
-            <!--div class="row no-gutters"-->
+              <!-- Bottom Row -->
               <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
