testing portfolio class removal

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
       </section>
       <!-- Portfolio-->
-      <div id="portfolio">
+      <div id="portfolios">
         <div class="container-fluid p-0">
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
           <hr class="divider my-4"/>
@@ -118,7 +118,6 @@
                       </div>
                   </a>
                 </div>
-              <!-- Bottom Row -->
               <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
