--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
       </section>
       <!-- Portfolio-->
-      <div id="portfolios">
+      <div id="portfolio">
         <div class="container-fluid p-0">
           <h2 class="text-center mt-0">My <b>Portfolio</b></h2>
           <hr class="divider my-4"/>
