Add momentum clone to portfolio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </div>
                   <div class="col-lg-8 align-self-baseline">
                       <p class="text-white-75 font-weight-light mb-5">
-                        Full(er)-stack Software Developer
+                        Full(er)-Stack Software Developer
                       </p>
                   </div>
               </div>
@@ -58,15 +58,17 @@
               <div class="row justify-content-center">
                   <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">About <b>Me</b></h2>
-                    <hr class="divider light my-4" />
+                    <hr class="divider my-4" />
                     <p class="text-white-50 mb-2">
-                      My name is Brian, I'm based in New York City and I consider myself a <i>Full(er)-stack developer.</i>
-                      Why? Because I spent almost a decade as a graphic designer in the world of concerts and live entertainment
-                      and now I'm ready to solve some engineering problems! I can code your back-end, code your
-                      front-end, AND design it all too! I love challenges and rarely back down from one so let's solve
-                      some problems together! (that's how I ended up running my first marathon)
-
-                      I love learning new skills, making music, traveling, climbing, coding, and eating. Mostly eating...
+                      My name is Brian, I'm based in New York City and I consider myself a <i>Full(er)-Stack Developer.</i>
+                      Why? Because I spent almost a decade as a graphic designer in the world of concerts and entertainment
+                      and now I'm ready to solve some different kinds of problems! I can code your back-end, code your
+                      front-end, AND design it all too! I love challenges and rarely back down from one (that's how I ended
+                      up running my first marathon)so let's solve some problems together!
+                    </p>
+                    <p class="text-white-50 mb-2">
+                      I love learning new skills, making music, climbing, traveling, coding, and eating. Mostly eating...
+                    </p>
                   </div>
               </div>
           </div>
@@ -81,7 +83,7 @@
               <!-- Project 1 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/my_personal_kanban_client/#/">
-                    <img class="img-fluid" src="assets/img/portfolio/mpk_650x350.jpg" alt="" />
+                    <img class="img-fluid" src="assets/img/portfolio/mpk_650x350.jpg" alt="My Personal Kanban" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">My Personal Kanban</div>
                         <div class="project-category text-white-75">
@@ -93,7 +95,7 @@
               <!-- Project 2 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://render-babyyoda.github.io/ecommerce-client/#/">
-                    <img class="img-fluid" src="assets/img/portfolio/cookieJar_650x350.jpg" alt="" />
+                    <img class="img-fluid" src="assets/img/portfolio/cookieJar_650x350.jpg" alt="CookieJar" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">cookieJar</div>
                         <div class="project-category text-white-75">
@@ -107,7 +109,7 @@
               <!-- Project 3 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
-                    <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="" />
+                    <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="Weather Finder App" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">Weather Finder App</div>
                         <div class="project-category text-white-75">
@@ -121,7 +123,7 @@
               <!-- Project 4 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
-                    <img class="img-fluid" src="assets/img/portfolio/days_since_650x350.jpg" alt="" />
+                    <img class="img-fluid" src="assets/img/portfolio/days_since_650x350.jpg" alt="Days Since" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">Days Since</div>
                         <div class="project-category text-white-75">
@@ -133,12 +135,13 @@
                 </div>
               <!-- Project 5 -->
                 <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://www.google.com">
-                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe_650x350.jpg" alt="" />
+                  <a class="portfolio-box" href="https://bchin224.github.io/momentum-clone/">
+                    <img class="img-fluid" src="assets/img/portfolio/momentum_clone_650x350.jpg" alt="Momentum Clone" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">Google Momentum Clone</div>
                         <div class="project-category text-white-75">
-                          React and JavaScript + API Integration
+                          A clone of the Google Chrome extension using React, JavaScript, the Unsplash API,
+                          the Open Weather API, and Moment.js library.
                         </div>
                       </div>
                   </a>
@@ -146,7 +149,7 @@
               <!-- Project 6 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
-                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe_650x350.jpg" alt="" />
+                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe_650x350.jpg" alt="Tic Tac Toe" />
                     <div class="portfolio-box-caption p-3">
                       <div class="project-name">Tic Tac Toe</div>
                       <div class="project-category text-white-75">
@@ -317,7 +320,7 @@
       </section>
       <!-- Footer-->
       <footer class="bg-light py-5">
-          <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+          <div class="container"><div class="small text-center text-muted">Copyright © 2021 - All Rights Reserved</div></div>
       </footer>
       <!-- Bootstrap core JS-->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
